# drones-2d

./: .gitignore  CMakeLists.txt  readme.md
libs/network/: layer.hpp  relu.hpp  sigmoid.hpp  tanh.hpp
src/: camera.hpp  main.cpp  utils.hpp
src/application/: application.cpp  application.hpp  on_event.cpp  on_key_press.cpp  on_key_release.cpp  on_mouse_down.cpp  on_mouse_move.cpp  on_mouse_scroll.cpp  on_mouse_up.cpp  on_window_close.cpp  on_window_resize.cpp  run.cpp  worker.cpp  worker.hpp
src/drones/: cloud.hpp  count_completed.cpp  draw_drone.cpp  draw_drone.hpp  draw_world.cpp  draw_world.hpp  drone.hpp  engine.hpp  init.cpp  network.hpp  plant.hpp  step.cpp  tree.hpp  world.hpp
src/drones/render/: draw_drone.cpp  draw_drone.hpp  draw_world.cpp  draw_world.hpp
src/events/: manager.hpp
src/renderer/: colour.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/renderer/quad/: draw_line.cpp  draw_point.cpp  draw_quad.cpp  draw_triangle.cpp  flush.cpp  renderer.hpp
src/renderer/text/: atlas.cpp  draw_text.cpp  renderer.cpp  renderer.hpp
src/simulation/: count_completed.cpp  draw_simulation.cpp  draw_simulation.hpp  init.cpp  simulation.hpp  step.cpp
src/window/: callback_cursor_position.cpp  callback_keyboard.cpp  callback_mouse_button.cpp  callback_mouse_scroll.cpp  callback_window_close.cpp  callback_window_size.cpp  window.cpp
